RESOLVED FIXED 129739
[CSS Shapes] large corner radius combined with 0 radius does not wrap properly
https://bugs.webkit.org/show_bug.cgi?id=129739
Summary [CSS Shapes] large corner radius combined with 0 radius does not wrap properly
Bem Jones-Bey
Reported 2014-03-05 07:30:30 PST
Created attachment 225881 [details] inset example If a corner radius larger than 50% of the length of the associated dimension (width or height) of the shape is combined with a corner radius that is 0, then wrapping doesn't happen properly to the resultant shape. This happens for both inset and box shapes. See the attached tests for examples.
Attachments
inset example (522 bytes, text/html)
2014-03-05 07:30 PST, Bem Jones-Bey
no flags
border-box example (950 bytes, text/html)
2014-03-05 08:23 PST, Bem Jones-Bey
no flags
Patch (8.54 KB, patch)
2014-04-07 13:12 PDT, Hans Muller
no flags
Bem Jones-Bey
Comment 1 2014-03-05 08:23:42 PST
Created attachment 225887 [details] border-box example
Hans Muller
Comment 2 2014-04-07 13:12:26 PDT
Created attachment 228753 [details] Patch Corrected special case handling for shape-outside border-box values with border-radius values that greater than or equal to the box's height.
Bem Jones-Bey
Comment 3 2014-04-08 14:57:05 PDT
Comment on attachment 228753 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-04-08 15:26:30 PDT
Comment on attachment 228753 [details] Patch Clearing flags on attachment: 228753 Committed r166966: <http://trac.webkit.org/changeset/166966>
WebKit Commit Bot
Comment 5 2014-04-08 15:26:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.