[CSS Shapes] large corner radius combined with 0 radius does not wrap properly https://bugs.webkit.org/show_bug.cgi?id=129739

Reviewed by Bem Jones-Bey.

Source/WebCore:

Corrected special case handling for shape-outside border-box values with border-radius
values that greater than or equal to the box's height.

Tests: fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-001.html
       fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-002.html

* rendering/shapes/BoxShape.cpp:
(WebCore::BoxShape::getExcludedIntervals):

LayoutTests:

* fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-001-expected.txt: Added.
* fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-001.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-002-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-big-box-border-radius-002.html: Added.


Canonical link: https://commits.webkit.org/149451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166966 268f45cc-cd09-0410-ab3c-d52691b4dbfc